Added backchannelLogoutUserSessionFromClient and changed backchannelLogoutUserFromClient